--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <!--==================== SERVICES 1 ====================--><!--==================== SERVICES ====================-->
                     <div class="services__content">
                         <div>
-                        <i class="uil uil-web-gridservice__icon"></i>
+                        <i class="uil uil-web-grid service__icon"></i>
                         <h3 class="services__title">ui/ux <br>designer</h3>
                         </div>
                     <span class="button button--flex button--small button--link service__button">
