--- a/index.html
+++ b/index.html
@@ -288,7 +288,6 @@
                                         <span class="qualification__line"></span>
                                     </div>
                                 </div>
-                             
                             </div>
                             <!--==================== QUALIFICATION CONTENT 2 ====================-->
                             <div class="qualification__content" data-content id="work">
@@ -322,25 +321,25 @@
             <!--==================== SERVICES 1 ====================--><!--==================== SERVICES ====================-->
                     <div class="services__content">
                         <div>
-                        <i class="uil uil-web-grid service__icon"></i>
-                        <h3 class="services__title">ui/ux <br>designer</h3>
+                            <i class="uil uil-web-grid service__icon"></i>
+                            <h3 class="services__title">ui/ux <br>designer</h3>
                         </div>
-                    <span class="button button--flex button--small button--link service__button">
-                        view more
-                        <i class="uil uil-arrow-right button__icon"></i>
-                    </span>
+                        <span class="button button--flex button--small button--link service__button">
+                            view more
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </span>
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-title">uiux <br>designer </h4>
-                            <i class="uil uil-times services__modal-icon"></i>
-                            <ul class="services__modal-services grid">
-                                <li class="services__modal-services grid">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>
-                                        i do webdev 
-                                    </p>
-                                </li>
-                            </ul>
+                            <h4 class="services__modal-title">ui/ux <br>designer </h4>
+                                 <i class="uil uil-times services__modal-close"></i>
+                                <ul class="services__modal-services grid">
+                                    <li class="services__modal-services ">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>
+                                            i do webdev 
+                                        </p>
+                                    </li>
+                                </ul>
                         </div>
                     </div>
                 </div>
@@ -354,123 +353,124 @@
                         view more
                         <i class="uil uil-arrow-right button__icon"></i>
                     </span>
-                    <div class="services__modal">
-                        <div class="services__modal-content">
-                            <h4 class="services__modal-title">frontend <br>developer </h4>
-                            <i class="uil uil-times services__modal-icon"></i>
-                            <ul class="services__modal-services grid">
-                                <li class="services__modal-services grid">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>
-                                        i do webdev 
-                                    </p>
-                                </li>
-                            </ul>
+                        <div class="services__modal">
+                            <div class="services__modal-content">
+                                <h4 class="services__modal-title">frontend <br>developer </h4>
+                                <i class="uil uil-times services__modal-icon"></i>
+                                <ul class="services__modal-services grid">
+                                    <li class="services__modal-services ">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>
+                                            i do webdev 
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
             <!--==================== SERVICES 3 ====================--><!--==================== SERVICES ====================-->
                     <div class="services__content">
                         <div>
-                        <i class="uil uil-pen services__icon"></i>
-                        <h3 class="services__title">cyber <br>security</h3>
+                            <i class="uil uil-pen services__icon"></i>
+                            <h3 class="services__title">cyber<br>security</h3>
                         </div>
-                    <span class="button button--flex button--small button--link service__button">
-                        view more
-                        <i class="uil uil-arrow-right button__icon"></i>
-                    </span>
-                    <div class="services__modal">
-                        <div class="services__modal-content">
-                            <h4 class="services__modal-title">cyber <br>security </h4>
-                            <i class="uil uil-times services__modal-icon"></i>
-                            <ul class="services__modal-services grid">
-                                <li class="services__modal-services grid">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>
-                                        i do webdev 
-                                    </p>
-                                </li>
-                            </ul>
+                            <span class="button button--flex button--small button--link service__button">
+                                        view more
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </span>
+                        <div class="services__modal">
+                            <div class="services__modal-content">
+                                <h4 class="services__modal-title">cyber <br>security </h4>
+                                <i class="uil uil-times services__modal-icon"></i>
+                                    <ul class="services__modal-services grid">
+                                        <li class="services__modal-services ">
+                                            <i class="uil uil-check-circle services__modal-icon"></i>
+                                            <p>
+                                                i do webdev 
+                                            </p>
+                                        </li>
+                                    </ul>
+                            </div>
                         </div>
-                    </div>
-                </div>
+                   </div>
             </section>
 
             <!--==================== PORTFOLIO ====================-->
             <section class="portfolio section" id="portfolio">
                 <h2 class="section__title"></h2>
-                <span class="section__subtitle">REcent work</span>
-                <div class="portfolio__container container"></div>
-                <div>
+                <span class="section__subtitle">Recent work</span>
+                <div class="portfolio__container container swiper-container">
+                    <div class="swiper-wrapper">
+                            <div>
                      <!-- PORTFOLIO 1 -->
-                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
-
-                        <div class="portfolio_data">
-                            <h3 class="portfolio_title">
-                                ELAR, An Edu-AR App
-                            </h3>
-                            <p class="portfolio_description">
-                                <b>“ELAR”</b> is An Augmented Reality based software which can be used by students with their traditional textbooks. This software will help students to visualize the 3D representation of the entity they are learning about.
-                            </p>
-                            <a href="https://github.com/anikurhade/ELAR" class="button button-flex button-small portfolio_button" target="_blank">
-                                Repo Link &nbsp;
-                                <i class="fa-brands fa-github"></i></i>
-              </a>
-                        </div>
+                                <div class="portfolio__content grid swiper-slide">
+                                    <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                                    <div class="portfolio_data">
+                                        <h3 class="portfolio_title">
+                                            ELAR, An Edu-AR App
+                                        </h3>
+                                        <p class="portfolio__description">
+                                            <b>“ELAR”</b> is An Augmented Reality based software which can be used by students with their traditional textbooks. This software will help students to visualize the 3D representation of the entity they are learning about.
+                                        </p>
+                                        <a href="https://github.com/anikurhade/ELAR" class="button button-flex button-small portfolio_button" target="_blank">
+                                            Repo Link &nbsp;
+                                            <i class="fa-brands fa-github"></i></i>
+                                        </a>
+                                    </div>
+                                </div>  
+                            </div>
                     </div>
                 </div>
                     <!-- Project 2 -->
-                    <div class="portfolio_content grid swiper-slide">
-                        <img src="img/grofmartprojimage.png" alt="" class="portfolio_img">
-
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/grofmartprojimage.png" alt="" class="portfolio__img">
                         <div class="portfolio_data">
                             <h3 class="portfolio_title">
                                 Grof-Mart
                             </h3>
-                            <p class="portfolio_description">
-                                <b>“Grof-Mart”</b> is a trial to supply the benefits of on-line looking to customers of a true look.This Is A Online Grocery Store With Full Payment Gateway Build In Pure Javascript And HTML.
-                            </p>
-                            <a href="https://github.com/anikurhade/GrofMart.github.io" class="button button-flex button-small portfolio_button" target="_blank">
-                                Repo Link &nbsp;
-                                <i class="fa-brands fa-github"></i></i>
-                    </a>&nbsp;
-                    <a href="https://anikurhade.github.io/GrofMart.github.io/" class="button button-flex button-small portfolio_button" target="_blank">
-                    Check Out &nbsp;
-                    <i class="fa-solid fa-display"></i>
-                    </a>
+                                <p class="portfolio__description">
+                                    <b>“Grof-Mart”</b> is a trial to supply the benefits of on-line looking to customers of a true look.This Is A Online Grocery Store With Full Payment Gateway Build In Pure Javascript And HTML.
+                                </p>
+                                <a href="https://github.com/anikurhade/GrofMart.github.io" class="button button-flex button-small portfolio_button" target="_blank">
+                                    Repo Link &nbsp;
+                                    <i class="fa-brands fa-github"></i></i>
+                                </a>&nbsp;
+                                <a href="https://anikurhade.github.io/GrofMart.github.io/" class="button button-flex button-small portfolio_button" target="_blank">
+                                Check Out &nbsp;
+                                <i class="fa-solid fa-display"></i>
+                                </a>
                         </div>
-                    <!-- Project 2 -->
-                    <div class="portfolio_content grid swiper-slide">
-                        <img src="img/grofmartprojimage.png" alt="" class="portfolio_img">
-
+                    </div>
+                    <!-- Project 3 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/grofmartprojimage.png" alt="" class="portfolio__img">
                         <div class="portfolio_data">
                             <h3 class="portfolio_title">
                                 Grof-Mart
                             </h3>
-                            <p class="portfolio_description">
-                                <b>“Grof-Mart”</b> is a trial to supply the benefits of on-line looking to customers of a true look.This Is A Online Grocery Store With Full Payment Gateway Build In Pure Javascript And HTML.
-                            </p>
-                            <a href="https://github.com/anikurhade/GrofMart.github.io" class="button button-flex button-small portfolio_button" target="_blank">
-                                Repo Link &nbsp;
-                                <i class="fa-brands fa-github"></i></i>
-                    </a>&nbsp;
-                    <a href="https://anikurhade.github.io/GrofMart.github.io/" class="button button-flex button-small portfolio_button" target="_blank">
-                    Check Out &nbsp;
-                    <i class="fa-solid fa-display"></i>
-                    </a>
+                                <p class="portfolio__description">
+                                    <b>“Grof-Mart”</b> is a trial to supply the benefits of on-line looking to customers of a true look.This Is A Online Grocery Store With Full Payment Gateway Build In Pure Javascript And HTML.
+                                </p>
+                                <a href="https://github.com/anikurhade/GrofMart.github.io" class="button button-flex button-small portfolio_button" target="_blank">
+                                    Repo Link &nbsp;
+                                    <i class="fa-brands fa-github"></i></i>
+                                </a>&nbsp;
+                                <a href="https://anikurhade.github.io/GrofMart.github.io/" class="button button-flex button-small portfolio_button" target="_blank">
+                                Check Out &nbsp;
+                                <i class="fa-solid fa-display"></i>
+                                </a>
                         </div>
+                    </div>
                         <!-- Arrows -->
-                <div class="swiper-button-next">
-                    <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
-                </div>
-                <div class="swiper-button-prev">
-                    <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
-                </div>
-                <!-- Pagination -->
-                <div class="swiper-pagination"></div>
+                        <div class="swiper-button-next">
+                            <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                        </div>
+                        <div class="swiper-button-prev">
+                            <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+                        </div>
+                         <!-- Pagination -->
+                        <div class="swiper-pagination"></div>
                     </div>
-                    
             </section>
 
             <!--==================== PROJECT IN MIND ====================-->
