--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                             <i class="uil uil-web-grid service__icon"></i>
                             <h3 class="services__title">ui/ux <br>designer</h3>
                         </div>
-                        <span class="button button--flex button--small button--link service__button">
+                        <span class="button button--flex button--small button--link services__button">
                             view more
                             <i class="uil uil-arrow-right button__icon"></i>
                         </span>
@@ -344,19 +344,19 @@
                     </div>
                 </div>
             <!--==================== SERVICES 2 ====================--><!--==================== SERVICES ====================-->
-                    <div class="services__content">
-                        <div>
-                        <i class="uil uil-arrow services__icon"></i>
-                        <h3 class="services__title">frontend <br>developer</h3>
-                        </div>
-                    <span class="button button--flex button--small button--link service__button">
-                        view more
-                        <i class="uil uil-arrow-right button__icon"></i>
-                    </span>
-                        <div class="services__modal">
-                            <div class="services__modal-content">
-                                <h4 class="services__modal-title">frontend <br>developer </h4>
-                                <i class="uil uil-times services__modal-icon"></i>
+                <div class="services__content">
+                    <div>
+                            <i class="uil uil-web-grid service__icon"></i>
+                            <h3 class="services__title">ui/ux <br>designer</h3>
+                     </div>
+                        <span class="button button--flex button--small button--link services__button">
+                            view more
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </span>
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <h4 class="services__modal-title">ui/ux <br>designer </h4>
+                                <i class="uil uil-times services__modal-close"></i>
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-services ">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
@@ -365,35 +365,59 @@
                                         </p>
                                     </li>
                                 </ul>
-                            </div>
                         </div>
                     </div>
+                </div>
             <!--==================== SERVICES 3 ====================--><!--==================== SERVICES ====================-->
-                    <div class="services__content">
-                        <div>
-                            <i class="uil uil-pen services__icon"></i>
-                            <h3 class="services__title">cyber<br>security</h3>
+                 <div class="services__content">
+                    <div>
+                            <i class="uil uil-web-grid service__icon"></i>
+                            <h3 class="services__title">ui/ux <br>designer</h3>
+                    </div>
+                        <span class="button button--flex button--small button--link services__button">
+                            view more
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </span>
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <h4 class="services__modal-title">ui/ux <br>designer </h4>
+                                <i class="uil uil-times services__modal-close"></i>
+                                <ul class="services__modal-services grid">
+                                    <li class="services__modal-services ">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>
+                                            i do webdev 
+                                        </p>
+                                    </li>
+                                </ul>
                         </div>
-                            <span class="button button--flex button--small button--link service__button">
-                                        view more
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </span>
-                        <div class="services__modal">
-                            <div class="services__modal-content">
-                                <h4 class="services__modal-title">cyber <br>security </h4>
-                                <i class="uil uil-times services__modal-icon"></i>
-                                    <ul class="services__modal-services grid">
-                                        <li class="services__modal-services ">
-                                            <i class="uil uil-check-circle services__modal-icon"></i>
-                                            <p>
-                                                i do webdev 
-                                            </p>
-                                        </li>
-                                    </ul>
-                            </div>
+                    </div>
+                </div>
+            <!--==================== SERVICES 4 ====================--><!--==================== SERVICES ====================-->
+                 <div class="services__content">
+                    <div>
+                            <i class="uil uil-web-grid service__icon"></i>
+                            <h3 class="services__title">ui/ux <br>designer</h3>
+                    </div>
+                        <span class="button button--flex button--small button--link services__button">
+                            view more
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </span>
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <h4 class="services__modal-title">ui/ux <br>designer </h4>
+                                <i class="uil uil-times services__modal-close"></i>
+                                <ul class="services__modal-services grid">
+                                    <li class="services__modal-services ">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>
+                                            i do webdev 
+                                        </p>
+                                    </li>
+                                </ul>
                         </div>
-                   </div>
-            </section>
+                    </div>
+                </div>
 
             <!--==================== PORTFOLIO ====================-->
             <section class="portfolio section" id="portfolio">
