--- a/mainpage.html
+++ b/mainpage.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./img/picture1.JPG" type="image/webp">
-    <link rel="icon" href="./img/picture1.JPG" type="image/webp">
+    <link rel="shortcut icon" href="./img/s_logo.jpeg" type="image/webp">
+    <link rel="icon" href="./img/s_logo.jpeg" type="image/webp">
     <meta name="description" content="Shreyas is currently a Junior at VU Pune. He is enthusiastic about technology and Cyber Security." />
     <meta property="og:title" content="Shreyas Varade" />
     <meta property="og:url" content="https://github.com/shreyas0201" />
     <meta property="og:description" content="Shreyas is currently a third year undergrad from India. He is enthusiastic about technology and Cyber Security." />
-    <meta property="og:image:secure_url" content="./img/picture1.JPG" />
-    <meta property="og:image" content="./img/picture1.JPG" />
+    <meta property="og:image:secure_url" content="./img/s_logo.jpeg" />
+    <meta property="og:image" content="./img/s_logo.jpeg" />
     <meta property="profile:username" content="ShreyasVarade" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Shreyas Varade" />
-    <meta name="twitter:image" content="./img/picture1.JPG" />
+    <meta name="twitter:image" content="./img/s_logo.jpeg" />
     <meta name="twitter:url" content="https://twitter.com/shreyasvarade2" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -133,7 +133,7 @@
                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                <image class="home_blob-img" style = "height: 200px; Width: 225px;" x="-12" y="0" href="./img/picture1.JPG" />
+                <image class="home_blob-img" style = "height: 200px; Width: 223px;" x="-12" y="0" href="./img/IMG_3015.JPG " />
               </g>
             </svg>
                     </div>
@@ -169,7 +169,7 @@
             <h2 class="section_title">About Me</h2>
             <span class="section_subtitle">My introduction</span>
             <div class="about_container container grid">
-                <img src="./img/pic2.jpg" height="120px" width="120px" style="border-radius: 50%;" class="about_img" />
+                <img src="./img/IMG_3049.JPG" height="220px" width="220px" style="border-radius: 50%;" class="about_img" />
                 <div class="about_data">
                     <p class="about_description">
                         Hey I'am Shreyas Varade👋. I am 21 Year Student , Currently Perusing My BTech In Computer Engineering with specialization in cyber security At Pune. I am A Web Developer And Find Myself Congenial while Creating Pleasing And Charming Website. I am keen to gain knowledge in Security Research In Various Vulnerabilities.
