--- a/mainpage.html
+++ b/mainpage.html
@@ -555,7 +555,7 @@
 
                     <!-- Project 1 -->
                     <div class="portfolio_content grid swiper-slide">
-                        <img src="./img/elarprojimage.png" alt="" class="portfolio_img">
+                        <img src="./img/logo.png" alt="" class="portfolio_img">
 
                         <div class="portfolio_data">
                             <h3 class="portfolio_title">
@@ -580,7 +580,7 @@
                     </div>
                     <!-- Project 2 -->
                     <div class="portfolio_content grid swiper-slide">
-                        <img src="img/grofmartprojimage.png" alt="" class="portfolio_img">
+                        <img src="img/iot.jpg" alt="" class="portfolio_img">
 
                         <div class="portfolio_data">
                             <h3 class="portfolio_title">
@@ -600,7 +600,7 @@
                     </div>
                     <!-- Project 3 -->
                     <div class="portfolio_content grid swiper-slide">
-                        <img src="img/rechargeapp_img.png" alt="" class="portfolio_img">
+                        <img src="img/Google_Contacts_logo.png" alt="" class="portfolio_img">
 
                         <div class="portfolio_data">
                             <h3 class="portfolio_title">
@@ -633,7 +633,7 @@
                     </div>      -->
                     <!-- Project 5 -->
                     <div class="portfolio_content grid swiper-slide">
-                        <img src="img/personalportfolio.png" alt="" class="portfolio_img">
+                        <img src="img/portfolio.png" alt="" class="portfolio_img">
 
                         <div class="portfolio_data">
                             <h3 class="portfolio_title">
@@ -679,7 +679,7 @@
                 <div class="swiper-wrapper">
                     <!-- Project 3 -->
                     <div class="portfolio_content grid swiper-slide">
-                        <img src="img/pabiohalloffame.png" alt="" class="portfolio_img">
+                        <img src="img/gms.jpg" alt="" class="portfolio_img">
 
                         <div class="portfolio_data">
                             <h3 class="portfolio_title">
@@ -696,7 +696,7 @@
                     </div>
                     <!-- Project 3 -->
                     <div class="portfolio_content grid swiper-slide">
-                        <img src="img/qualcomapperitate.png" alt="" class="portfolio_img">
+                        <img src="img/goimail.jpg" alt="" class="portfolio_img">
 
                         <div class="portfolio_data">
                             <h3 class="portfolio_title">
@@ -721,7 +721,7 @@
                     </div>
                    
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="img/cloudcertificate.png" alt="" class="portfolio_img">
+                            <img src="img/c.jpg" alt="" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">
@@ -730,6 +730,7 @@
                                 <p class="portfolio_description">
                                     Completed  C Programming course with grade <b>A</b> 2019.
                                 </p>
+                                <p>* Press  <i class="fa fa-arrow-left" ></i> <i class="fa fa-arrow-right" ></i> on your keyboard</p>
                             </div>
                         </div>
                              <!--
